moving loader to component + fix single scrollable on loading + fix z-index with overlay and loader

--- a/src/assets/scss/ui/views/singleProject/_singleProject.scss
+++ b/src/assets/scss/ui/views/singleProject/_singleProject.scss
@@ -2,6 +2,16 @@
   position: relative;
   height: fit-content;
   overflow: hidden;
+
+  &.isPageReady {
+    overflow-y: visible;
+
+  }
+
+  &.isNotPageReady {
+    overflow: hidden;
+    height: 100vh;
+  }
   &-banner {
     position: relative;
     width: 100%;
